# computer_graphics-project

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
